--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members = [ "kernel", "server_router", "system_types",
+members = [ "kernel", "localization", "server_router", "system_types",
     "ui", "ui-server", "virtual_dom",
 ]
 
